# bacaro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bacaro.pc.in  llms.txt
.github/workflows/: ci-clang.yml  ci.yml
docs/: api.md  architecture.md  concepts.md  edge-cases.md  getting-started.md  tools.md
include/: bacaro.h
src/: bacaro.cpp  cache.cpp  cache.h  discovery.cpp  discovery.h  internal.h  wire.cpp  wire.h
tests/: CMakeLists.txt  test_cache.cpp  test_discovery.cpp  test_get_domain.cpp  test_helpers.h  test_lifecycle.cpp  test_pubsub.cpp  test_snapshot.cpp  test_wire.cpp
tools/: CMakeLists.txt  oste.cpp  vecio.cpp
